open pdf in  a new tab and fix spacing (#392)
open pdf in a new tab and fix spacing

--- a/src/scss/tunga.scss
+++ b/src/scss/tunga.scss
@@ -3806,7 +3806,7 @@ textarea {
         }
 
         .preview-image {
-            margin-top: -12rem;
+            margin-top: -17rem;
         }
         
     }
